--- a/roles/moving_objects_between_buckets/tasks/main.yml
+++ b/roles/moving_objects_between_buckets/tasks/main.yml
@@ -16,7 +16,7 @@
       when: dest_bucket is undefined
 
     # Obtaining specifc or all the source bucket objects
-    - name: Obtaining all the source bucket objects
+    - name: Obtaining specifc or all the source bucket objects
       amazon.aws.s3_object:
         bucket: "{{ source_bucket }}"
         mode: list
