--- a/roles/moving_objects_between_buckets/tasks/main.yml
+++ b/roles/moving_objects_between_buckets/tasks/main.yml
@@ -42,6 +42,18 @@
       loop: "{{ source_bucket_info.s3_keys }}"
     
     # Delete source s3 bucket when empty
+    - name: Obtaining all the source bucket objects
+      amazon.aws.s3_object:
+        bucket: "{{ source_bucket }}"
+        mode: list
+      when: delete_empty_source_bucket is defined and delete_empty_source_bucket
+      register: source_bucket_info
+
+    - name: Fail when the source s3 bucket is not empty and delete_empty_source_bucket is true
+      ansible.builtin.fail:
+        msg: The source must be emptied before it can be deleted.
+      when: delete_empty_source_bucket is defined and delete_empty_source_bucket and source_bucket_info.s3_keys
+
     - name: Delete source s3 bucket when empty
       amazon.aws.s3_bucket:
         name: "{{ source_bucket }}"
