fix: integration test test_manage_vpc_peering

--- a/tests/integration/targets/test_manage_vpc_peering/defaults/main.yml
+++ b/tests/integration/targets/test_manage_vpc_peering/defaults/main.yml
@@ -1,10 +1,18 @@
 ---
 # defaults file for manage_vpc_peering role
+aws_security_token: '{{ security_token | default(omit) }}'
+test_vpc_region_1:
+  region: "{{ aws_region }}"
+  vpcs:
+    - cidr_block: '172.{{ 255 | random(seed=resource_prefix) }}.0.0/28'
+      name: '{{ resource_prefix }}-vpc-1'
+    - cidr_block: '192.{{ 255 | random(seed=resource_prefix) }}.0.0/28'
+      name: '{{ resource_prefix }}-vpc-2'
 
-test_vpc_name_1_1: role_test_vpc_1_1
-test_vpc_name_1_2: role_test_vpc_1_2
-test_vpc_name_2: role_test_vpc_2
-
-test_vpc_cidr_1_1: 172.10.0.0/16
-test_vpc_cidr_1_2: 192.168.0.0/28
-test_vpc_cidr_2_1: 192.168.64.0/26
+# Disable: IAM permission does not allow to create VPC into a region different than the one
+# defined into variable 'aws_region'
+# test_vpc_region_2:
+#   region: ""
+#   vpcs:
+#     - cidr_block: '10.{{ 255 | random(seed=resource_prefix) }}.0.0/28'
+#       name: '{{ resource_prefix }}-vpc-3'
