--- a/tests/integration/targets/test_manage_vpc_peering/tasks/main.yml
+++ b/tests/integration/targets/test_manage_vpc_peering/tasks/main.yml
@@ -1,52 +1,24 @@
 ---
 - name: Test 'manage_vpc_peering' role
-  module_defaults:
-    group/aws:
-      aws_access_key: "{{ aws_access_key }}"
-      aws_secret_key: "{{ aws_secret_key }}"
-      security_token: "{{ security_token | default(omit) }}"
-      region: "{{ aws_region }}"
-
   block:
     - name: Include 'setup.yml' file
       ansible.builtin.include_tasks: setup.yml
 
     # VPC Peering (same region)
-    - name: Create VPC peering (same region)
-      ansible.builtin.include_role:
-        name: cloud.aws_ops.manage_vpc_peering
+    - name: Test VPC Peering in the same region
+      ansible.builtin.include_tasks: vpc_peering.yml
       vars:
-        requester_vpc: "{{ eu_central_1_vpc_1.vpc.id }}"
-        accepter_vpc: "{{ eu_central_1_vpc_2.vpc.id }}"
-        region: eu-central-1
-        vpc_peering_operation: create
+        vpc_peering_accepter_vpc_id: "{{ __vpcs_region1.results.0.vpc.id }}"
+        vpc_peering_requester_vpc_id: "{{ __vpcs_region1.results.1.vpc.id }}"
+        vpc_peering_accepter_region: "{{ test_vpc_region_1.region }}"
 
-    - name: Delete VPC peering connection req
-      ansible.builtin.include_role:
-        name: cloud.aws_ops.manage_vpc_peering
+    # VPC Peering (different region)
+    - name: Test VPC Peering in the same region
+      ansible.builtin.include_tasks: vpc_peering.yml
       vars:
-        region: eu-central-1
-        vpc_peering_conn_id: "{{ manage_vpc_peering_req_id }}"
-        vpc_peering_operation: delete
-
-    #  VPC Peering (cross region)
-    - name: Create VPC peering (cross region)
-      ansible.builtin.include_role:
-        name: cloud.aws_ops.manage_vpc_peering
-      vars:
-        region: eu-central-1
-        accepter_vpc_region: us-west-1
-        requester_vpc: "{{ eu_central_1_vpc_1.vpc.id }}"
-        accepter_vpc: "{{ us_west_1_vpc_1.vpc.id }}"
-        vpc_peering_operation: create
-
-    - name: Delete VPC peering connection req
-      ansible.builtin.include_role:
-        name: cloud.aws_ops.manage_vpc_peering
-      vars:
-        region: eu-central-1
-        vpc_peering_conn_id: "{{ manage_vpc_peering_req_id }}"
-        vpc_peering_operation: delete
+        vpc_peering_accepter_vpc_id: "{{ __vpcs_region2.results.0.vpc.id }}"
+        vpc_peering_requester_vpc_id: "{{ __vpcs_region1.results.0.vpc.id }}"
+        vpc_peering_accepter_region: "{{ test_vpc_region_2.region }}"
 
   always:
     - name: Include 'teardown.yml' file
