add *.pyc into ignore files

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /tests/integration/inventory
 /changelogs/.plugin-cache.yaml
 tests/integration/cloud-config-*
+*pyc
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
