add dependency with safe to test

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -16,6 +16,8 @@ jobs:
     if: ${{ github.event.label.name == 'safe to test' }} || ${{ github.event.action != 'labeled' }}
     uses: ansible-network/github_actions/.github/workflows/safe-to-test.yml@main
   splitter:
+    needs:
+      - safe-to-test
     runs-on: ubuntu-latest
     env:
       source_dir: "cloud_awsops"
