--- a/tests/integration/targets/test_move_objects_between_buckets/tasks/main.yml
+++ b/tests/integration/targets/test_move_objects_between_buckets/tasks/main.yml
@@ -71,9 +71,9 @@
     - name: Check the source s3 bucket remaining objects
       ansible.builtin.assert:
         that:
-        - "bucket_src_info.s3_keys[0] == 'put-binary.bin'"
-        - "bucket_src_info.s3_keys[1] == 'test.py'"
-        
+          - "bucket_src_info.s3_keys[0] == 'put-binary.bin'"
+          - "bucket_src_info.s3_keys[1] == 'test.py'"
+
     - name: Obtaining destination bucket
       amazon.aws.s3_object:
         bucket: "{{ bucket.dest }}"
@@ -83,8 +83,8 @@
     - name: Check the destination s3 bucket obtained one object
       ansible.builtin.assert:
         that:
-        - "bucket_dest_info.s3_keys[0] == 'template/test.txt'"
-    
+          - "bucket_dest_info.s3_keys[0] == 'template/test.txt'"
+
     # Move all objects between buckets =======================================================
     - name: Move all objects between buckets
       ansible.builtin.include_role:
@@ -102,8 +102,8 @@
     - name: Check the source s3 bucket is empty
       ansible.builtin.assert:
         that:
-        - "bucket_src_info.s3_keys == []"
-        
+          - "bucket_src_info.s3_keys == []"
+
     - name: Obtaining destination bucket
       amazon.aws.s3_object:
         bucket: "{{ bucket.dest }}"
@@ -113,9 +113,9 @@
     - name: Check the destination s3 bucket received all objects
       ansible.builtin.assert:
         that:
-        - "bucket_dest_info.s3_keys[0] in ['put-binary.bin','template/test.txt', 'test.py']"
-        - "bucket_dest_info.s3_keys[1] in ['put-binary.bin','template/test.txt', 'test.py']"
-        - "bucket_dest_info.s3_keys[2] in ['put-binary.bin','template/test.txt', 'test.py']"
+          - "bucket_dest_info.s3_keys[0] in ['put-binary.bin','template/test.txt', 'test.py']"
+          - "bucket_dest_info.s3_keys[1] in ['put-binary.bin','template/test.txt', 'test.py']"
+          - "bucket_dest_info.s3_keys[2] in ['put-binary.bin','template/test.txt', 'test.py']"
 
     # Delete source s3 bucket when empty ===================================================
     - name: Delete source s3 bucket when empty
@@ -132,10 +132,11 @@
         mode: list
       register: bucket_src_info
       ignore_errors: true
-    
+
     - name: Check the destination s3 bucket received all objects
       ansible.builtin.assert:
-        that: bucket_src_info is failed
+        that:
+          - bucket_src_info is failed
 
   always:
     # Clean up starts here =================================================================
