--- a/tests/integration/targets/test_manage_vpc_peering/tasks/main.yml
+++ b/tests/integration/targets/test_manage_vpc_peering/tasks/main.yml
@@ -11,35 +11,23 @@
     - name: Include 'setup.yml' file
       ansible.builtin.include_tasks: setup.yml
 
-    # VPC Peering (same region)
-    - name: Create VPC peering (same region)
-      ansible.builtin.include_role:
-        name: cloud.aws_ops.manage_vpc_peering
-      # noqa: var-naming[no-role-prefix]
-      vars:
-        requester_vpc: "{{ us_east_1_vpc_1.vpc.id }}"
-        accepter_vpc: "{{ us_east_1_vpc_2.vpc.id }}"
-        region: us-east-1
-        vpc_peering_operation: create
 
-    - name: Delete VPC peering connection req
-      ansible.builtin.include_role:
-        name: cloud.aws_ops.manage_vpc_peering
-      # noqa: var-naming[no-role-prefix]
+    - name: Test VPC Peering in the same region
+      ansible.builtin.include_tasks: create_delete_accept_peering.yml
       vars:
-        region: us-east-1
-        vpc_peering_conn_id: "{{ manage_vpc_peering_req_id }}"
-        vpc_peering_operation: delete
+        vpc_peering_accepter_vpc_id: "{{ test_vpc_1.vpc.id }}"
+        vpc_peering_requester_vpc_id: "{{ test_vpc_2.vpc.id }}"
+        vpc_peering_accepter_region: "{{ aws_region }}"
 
-  # NOTE: Tests for cross-region vpc peering skipped as CI permissions are restricted to us-east-1 only
+  # Disable: Tests for cross-region vpc peering skipped as CI permissions are restricted to us-east-1 only
   #  VPC Peering (cross region)
   # - name: Create VPC peering (cross region)
   #   ansible.builtin.include_role:
   #     name: cloud.aws_ops.manage_vpc_peering
   #   vars:
-  #     region: us-east-1
+  #     region: "{{ aws_region }}"
   #     accepter_vpc_region: us-west-1
-  #     requester_vpc: "{{ us_east_1_vpc_1.vpc.id }}"
+  #     requester_vpc: "{{ test_vpc_1.vpc.id }}"
   #     accepter_vpc: "{{ us_west_1_vpc_1.vpc.id }}"
   #     vpc_peering_operation: create
 
@@ -47,7 +35,7 @@
   #   ansible.builtin.include_role:
   #     name: cloud.aws_ops.manage_vpc_peering
   #   vars:
-  #     region: us-east-1
+  #     region: "{{ aws_region }}"
   #     vpc_peering_conn_id: "{{ manage_vpc_peering_req_id }}"
   #     vpc_peering_operation: delete
 
