--- a/roles/manage_vpc_peering/tasks/accept.yaml
+++ b/roles/manage_vpc_peering/tasks/accept.yaml
@@ -2,16 +2,16 @@
 - name: Fail when required parameters are not provided
   ansible.builtin.fail:
     msg: Please provide required parameters to create VPC peering (refer documentation for more information)
-  when: region is not defined or vpc_peering_conn_id is not defined
+  when: manage_vpc_peering_region is not defined or manage_vpc_peering_vpc_peering_conn_id is not defined
 
 - name: Accept VPC peering connection request
   block:
     - name: Ensure VPC peering connection request exists before moving forward
       community.aws.ec2_vpc_peering_info:
         peer_connection_ids:
-          - "{{ vpc_peering_conn_id }}"
-        region: "{{ region }}"
-        profile: "{{ accepter_account_profile | default(omit) }}"
+          - "{{ manage_vpc_peering_vpc_peering_conn_id }}"
+        region: "{{ manage_vpc_peering_region }}"
+        profile: "{{ manage_vpc_peering_accepter_account_profile | default(omit) }}"
       register: manage_vpc_peering_peering_info
       retries: 3
       delay: 5
@@ -19,9 +19,9 @@
 
     - name: Accept VPC peering request
       community.aws.ec2_vpc_peer:
-        region: "{{ region }}"
-        peering_id: "{{ vpc_peering_conn_id }}"
-        peer_owner_id: "{{ accepter_vpc_account_id | default(omit) }}"
-        profile: "{{ accepter_account_profile | default(omit) }}"
+        region: "{{ manage_vpc_peering_region }}"
+        peering_id: "{{ manage_vpc_peering_vpc_peering_conn_id }}"
+        peer_owner_id: "{{ manage_vpc_peering_accepter_vpc_account_id | default(omit) }}"
+        profile: "{{ manage_vpc_peering_accepter_account_profile | default(omit) }}"
         state: accept
       register: manage_vpc_peering_accept_peering_request
