--- a/roles/manage_vpc_peering/tasks/delete.yaml
+++ b/roles/manage_vpc_peering/tasks/delete.yaml
@@ -2,14 +2,14 @@
 - name: Fail when required parameters are not provided
   ansible.builtin.fail:
     msg: Please provide required parameters to delete VPC peering (refer documentation for more information)
-  when: region is not defined or vpc_peering_conn_id is not defined
+  when: manage_vpc_peering_region is not defined or manage_vpc_peering_vpc_peering_conn_id is not defined
 
 - name: Delete vpc peering connection request
   block:
     - name: Delete a local VPC peering connection
       community.aws.ec2_vpc_peer:
-        region: "{{ region }}"
-        peering_id: "{{ vpc_peering_conn_id }}"
+        region: "{{ manage_vpc_peering_region }}"
+        peering_id: "{{ manage_vpc_peering_vpc_peering_conn_id }}"
         state: absent
       register: manage_vpc_peering_vpc_peer
 
