Fix integration tests

--- a/tests/integration/targets/test_manage_transit_gateway/tasks/setup.yml
+++ b/tests/integration/targets/test_manage_transit_gateway/tasks/setup.yml
@@ -1,4 +1,14 @@
 ---
+- name: Get available AZs
+  amazon.aws.aws_az_info:
+    filters:
+      region-name: '{{ aws_region }}'
+  register: _az_info
+
+- name: Pick an AZ
+  ansible.builtin.set_fact:
+    ec2_availability_zone_names: '{{ _az_info.availability_zones | selectattr("zone_name", "defined") | map(attribute="zone_name") | list }}'
+
 - name: 'Pick 2 AZs available for use'
   ansible.builtin.set_fact:
     subnet_az_a_1: '{{ ec2_availability_zone_names[0] }}'
@@ -49,7 +59,7 @@
 - name: 'Set facts'
   ansible.builtin.set_fact:
     subnet_id_a_1: '{{ create_subnets.results[0].subnet.id }}'
-    subnet_id_b_1: '{{ create_subnets.results[3].subnet.id }}'
+    subnet_id_b_1: '{{ create_subnets.results[1].subnet.id }}'
 
 - name: Create customer gateway
   community.aws.ec2_customer_gateway:
