--- a/tests/integration/targets/test_manage_transit_gateway/tasks/cleanup.yml
+++ b/tests/integration/targets/test_manage_transit_gateway/tasks/cleanup.yml
@@ -8,7 +8,7 @@
       asn: 5200000000
       description: "TGW for Cloud team"
       tags:
-        "Name": "{{ manage_transit_gateway_tgw_name }}"
+        "team": "cloud"
 
 - name: 'Delete Custome GW'
   community.aws.ec2_customer_gateway:
