--- a/tests/integration/targets/test_manage_transit_gateway/tasks/vpc_attachments.yml
+++ b/tests/integration/targets/test_manage_transit_gateway/tasks/vpc_attachments.yml
@@ -6,11 +6,12 @@
       ansible.builtin.include_role:
         name: cloud.aws_ops.manage_transit_gateway
       vars:
+        action: "create"
         transit_gateway:
           asn: 5200000000
           description: "TGW for Cloud team"
           tags:
-            "Name": "{{ manage_transit_gateway_tgw_name }}"
+            "team": "cloud"
         vpc_attachment:
           - name: "vpc-attachment-001"
             tags:
@@ -36,7 +37,7 @@
       loop: "{{ manage_transit_gateway_gw_info.transit_gateways }}"
 
     - name: Describe attachments on a specific VPC
-      community.aws.ec2_transit_gateway_vpc_manage_transit_gateway_attachment_info:
+      community.aws.ec2_transit_gateway_vpc_attachment_info:
         filters:
           transit-gateway-id: '{{ gw.transit_gateway_id }}'
       register: manage_transit_gateway_attachment_info
