--- a/roles/move_objects_between_buckets/tasks/main.yml
+++ b/roles/move_objects_between_buckets/tasks/main.yml
@@ -5,57 +5,57 @@
 
   block:
     # Checking required variables
-    - name: Fail when 'source_bucket' is undefined
+    - name: Fail when 'move_objects_between_buckets_source_bucket' is undefined
       ansible.builtin.fail:
-        msg: source bucket should be defined as source_bucket
-      when: source_bucket is undefined
+        msg: source bucket should be defined as move_objects_between_buckets_source_bucket
+      when: move_objects_between_buckets_source_bucket is undefined
 
-    - name: Fail when 'dest_bucket' is undefined
+    - name: Fail when 'move_objects_between_buckets_dest_bucket' is undefined
       ansible.builtin.fail:
-        msg: destination bucket should be defined as dest_bucket
-      when: dest_bucket is undefined
+        msg: destination bucket should be defined as move_objects_between_buckets_dest_bucket
+      when: move_objects_between_buckets_dest_bucket is undefined
 
     # Obtaining specifc or all the source bucket objects
     - name: Obtaining specifc or all the source bucket objects
       amazon.aws.s3_object:
-        bucket: "{{ source_bucket }}"
+        bucket: "{{ move_objects_between_buckets_source_bucket }}"
         mode: list
-        prefix: "{{ key_prefix | default('') }}"
-      register: source_bucket_info
+        prefix: "{{ move_objects_between_buckets_key_prefix | default('') }}"
+      register: move_objects_between_buckets_source_bucket_info
 
     # Transferring objects from source bucket to destination bucket
     - name: Moving objects between source bucket to destination bucket
       amazon.aws.s3_object:
-        bucket: "{{ dest_bucket }}"
+        bucket: "{{ move_objects_between_buckets_dest_bucket }}"
         object: "{{ item }}"
         mode: copy
         copy_src:
-          bucket: "{{ source_bucket }}"
+          bucket: "{{ move_objects_between_buckets_source_bucket }}"
           object: "{{ item }}"
-      loop: "{{ source_bucket_info.s3_keys }}"
+      loop: "{{ move_objects_between_buckets_source_bucket_info.s3_keys }}"
 
     - name: Delete the source bucket objects
       amazon.aws.s3_object:
-        bucket: "{{ source_bucket }}"
+        bucket: "{{ move_objects_between_buckets_source_bucket }}"
         object: "{{ item }}"
         mode: delobj
-      loop: "{{ source_bucket_info.s3_keys }}"
+      loop: "{{ move_objects_between_buckets_source_bucket_info.s3_keys }}"
 
     # Delete source s3 bucket when empty
     - name: Obtaining all the source bucket objects
       amazon.aws.s3_object:
-        bucket: "{{ source_bucket }}"
+        bucket: "{{ move_objects_between_buckets_source_bucket }}"
         mode: list
-      when: delete_empty_source_bucket is defined and delete_empty_source_bucket
-      register: source_bucket_info
+      when: move_objects_between_buckets_delete_empty_source_bucket is defined and move_objects_between_buckets_delete_empty_source_bucket
+      register: move_objects_between_buckets_source_bucket_info
 
-    - name: Fail when the source s3 bucket is not empty and delete_empty_source_bucket is true
+    - name: Fail when the source s3 bucket is not empty and move_objects_between_buckets_delete_empty_source_bucket is true
       ansible.builtin.fail:
         msg: The source must be emptied before it can be deleted.
-      when: delete_empty_source_bucket is defined and delete_empty_source_bucket and source_bucket_info.s3_keys
+      when: move_objects_between_buckets_delete_empty_source_bucket is defined and move_objects_between_buckets_delete_empty_source_bucket and move_objects_between_buckets_source_bucket_info.s3_keys
 
     - name: Delete source s3 bucket when empty
       amazon.aws.s3_bucket:
-        name: "{{ source_bucket }}"
+        name: "{{ move_objects_between_buckets_source_bucket }}"
         state: absent
-      when: "{{ delete_empty_source_bucket | default(false) }}"
+      when: "{{ move_objects_between_buckets_delete_empty_source_bucket | default(false) }}"
