--- a/tests/integration/targets/test_manage_transit_gateway/tasks/cleanup.yml
+++ b/tests/integration/targets/test_manage_transit_gateway/tasks/cleanup.yml
@@ -1,11 +1,11 @@
 ---
-- name: Delete Transit Gateway with VPC/VPC attachemnts
+- name: Delete Transit Gateway with VPC/VPN attachemnts
   ansible.builtin.include_role:
     name: cloud.aws_ops.manage_transit_gateway
   vars:
     action: "delete"
     transit_gateway:
-      asn: 5200000000
+      asn: 4200000000
       description: "TGW for Cloud team"
       tags:
         "team": "cloud"
