--- a/roles/create_rds_replica_from_existing_rds_instance/tasks/main.yaml
+++ b/roles/create_rds_replica_from_existing_rds_instance/tasks/main.yaml
@@ -1,11 +1,12 @@
 ---
-- name: Run 'create_rds_replica_from_existing_rds_instance' role
+- name: Run 'replicate_existing_rds_instance' role
   module_defaults:
-    group/aws: "{{ aws_role_credentials }}"
+    group/aws: "{{ aws_setup_credentials__output }}"
 
   block:
     - name: Create a read replica
       amazon.aws.rds_instance:
-        db_instance_identifier: '{{ rds_instance_replica }}'
-        source_db_instance_identifier: '{{ rds_instance_orig }}'
+        db_instance_identifier: '{{ replicate_existing_rds_instance_rds_instance_repli }}'
+        source_db_instance_identifier: '{{ replicate_existing_rds_instance_rds_instance_src }}'
         read_replica: true
+      register: info
