--- a/tests/integration/targets/test_create_rds_replica_from_existing_rds_instance/defaults/main.yml
+++ b/tests/integration/targets/test_create_rds_replica_from_existing_rds_instance/defaults/main.yml
@@ -1,8 +1,8 @@
 ---
 # defaults file for tests/integration/targets/test_moving_objects_between_buckets
-instance_id: test-rds_instance
+instance_id: testRDSInstance
 state: present
-engine: aurora-postgresql
+engine: mysql
 username: testrdsusername
 password: test-rds_password
 db_instance_class: db.t2.micro
