--- a/galaxy.yml
+++ b/galaxy.yml
@@ -19,6 +19,7 @@ tags:
 dependencies:
   amazon.aws: '>=5.1.0'
   community.aws: '>=5.0.0'
+  amazon.cloud: '>=0.4.0'
 version: 1.0.3
 build_ignore:
   - .DS_Store
